# nRF52832_EV_BC832

./: README.md
blinky_custom/: CMakeLists.txt
blinky_custom/boards/arm/nrf52832_bc832/: Kconfig.board  Kconfig.defconfig  nrf52832_bc832.dts  nrf52832_bc832.yaml  nrf52832_bc832_defconfig
led_and_switch/boards/arm/nrf52832_ev_bc832/: Kconfig  Kconfig.board  nrf52832_ev_bc832.dts
led_and_switch/src/: main.c
littleFS/: CMakeLists.txt  README.rst  prj.conf  west.yml
littleFS/boards/arm/nrf52832_ev_bc832/: Kconfig  Kconfig.defconfig  nrf52832_ev_bc832-pinctrl.dtsi  nrf52832_ev_bc832.overlay  nrf52832_ev_bc832.yaml  nrf52832_ev_bc832_defconfig
littleFS/src/: lfs_config.h  main.c  mx25l51245g_flash.c  mx25l51245g_flash.h
system_off/: CMakeLists.txt  prj.conf
system_off/boards/arm/nrf52832_magpie/: Kconfig.board  Kconfig.defconfig  nrf52832_magpie.dts  nrf52832_magpie.yaml  nrf52832_magpie_defconfig
system_off/src/: main.c
